--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
@@ -15,7 +20,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && react-snapshot",
-    "test": "react-scripts test --env=jsdom",
+    "lint": "eslint ./src",
+    "tdd": "react-scripts test --env=jsdom",
+    "test": "yarn run lint && react-scripts test --env=jsdom --coverage",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
