--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
+    "bootstrap": "^4.0.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.10",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -35,6 +36,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -46,6 +48,8 @@
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
     "react-snapshot": "^1.3.0",
+    "sass-loader": "^6.0.6",
+    "style": "^0.0.3",
     "style-loader": "0.19.0",
     "styled-components": "^3.1.6",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -60,7 +64,7 @@
     "build": "node scripts/build.js && react-snapshot",
     "upload": "s3p sync",
     "deploy": "yarn run build && yarn run upload",
-    "lint": "eslint ./src",
+    "lint": "eslint .",
     "tdd": "node scripts/test.js --env=jsdom",
     "test": "yarn run lint && node scripts/test.js --env=jsdom --coverage"
   },
