Add 404 page and instructions for setting up custom 404 on Cloudfront
Conflicts:
	src/App.js

--- a/package.json
+++ b/package.json
@@ -114,5 +114,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "reactSnapshot": {
+    "include": [
+      "/404"
+    ]
   }
 }
